--- a/src/MicroServices.Core/ExceptionMessages.resx
+++ b/src/MicroServices.Core/ExceptionMessages.resx
@@ -117,13 +117,25 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="DataContractExtensions_CircularReference" xml:space="preserve">
-    <value>Updating instance of type '{0}' to its latest version failed: version of type '{1}' introduced a circular update by returning an instance of type '{2}'.</value>
+  <data name="Comparable_IncomparableType" xml:space="preserve">
+    <value>The specified object of type '{0}' cannot be compared to instance of type '{1}'.</value>
   </data>
-  <data name="DataContractExtensions_InvalidCast" xml:space="preserve">
-    <value>Updating instance of type '{0}' to its latest version failed: could not convert latest version of type '{1}' to instance of type '{2}'.</value>
+  <data name="ContextScope_IncorrectNesting" xml:space="preserve">
+    <value>The scopes were not nested correctly.</value>
   </data>
-  <data name="MessageKindExtensions_MessageKindNotSupported" xml:space="preserve">
-    <value>The specified MessageKind ({0}) is not valid.</value>
+  <data name="Context_IllegalScopeStarted" xml:space="preserve">
+    <value>Cannot start this scope because a more restrive scope is still active.</value>
+  </data>
+  <data name="DateTimeSpan_InvalidTimeSpan" xml:space="preserve">
+    <value>Invalid time span specified: [{0}, {1}].</value>
+  </data>
+  <data name="DateTimeSpan_TimeSpanZeroNotAllowed" xml:space="preserve">
+    <value>'{0}' is not allowed to be zero.</value>
+  </data>
+  <data name="MemberInfoExtensions_AmbiguousAttributeMatch" xml:space="preserve">
+    <value>Cannot obtain single attribute of type '{0}' declared on '{1}' because multiple attributes are of type '{0}'.</value>
+  </data>
+  <data name="ReadOnlyList_IndexOutOfRange" xml:space="preserve">
+    <value>There is no element at index '{0}' (Count = {1}).</value>
   </data>
 </root>
