Changed default error message.

--- a/src/MicroServices.Contract/ErrorMessages.resx
+++ b/src/MicroServices.Contract/ErrorMessages.resx
@@ -118,6 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="NotDefaultAttribute_ValueHasDefaultValue" xml:space="preserve">
-    <value>'{0}' is not allowed to have its default value.</value>
+    <value>{0} must have a non-default value.</value>
   </data>
 </root>
