Refactored MessageStream-class.

--- a/src/MicroServices.Implementation.TestEngine/ExceptionMessages.resx
+++ b/src/MicroServices.Implementation.TestEngine/ExceptionMessages.resx
@@ -123,14 +123,11 @@
   <data name="MessageHandlerOperationTestResult_StreamNotEmpty" xml:space="preserve">
     <value>Expected an empty stream, but stream contains {0} message(s).</value>
   </data>
+  <data name="MessageStream_IndexOutOfRange" xml:space="preserve">
+    <value>Index cannot be negative: {0}.</value>
+  </data>
   <data name="MessageStream_MessageNotFound" xml:space="preserve">
-    <value>Message of type '{0}' not found at index '{1}': the MessageStream contains only {2} message(s).</value>
-  </data>
-  <data name="MessageStream_MessageNotOfExpectedKind" xml:space="preserve">
-    <value>Message at index '{0}' was expected to be of kind '{1}' but was '{2}'.</value>
-  </data>
-  <data name="MessageStream_MessageNotOfExpectedType" xml:space="preserve">
-    <value>Expected message of type '{0}' at index '{1}', but found message of type '{2}'.</value>
+    <value>Message of type '{0}' was not found at index '{1}'; stream contains {2} message(s) of type '{0}'.</value>
   </data>
   <data name="MicroProcessorConfiguration_ProcessorAlreadyConfigured" xml:space="preserve">
     <value>Cannot invoke '{0}' at this point: the processor has already been configured.</value>
