--- a/src/MicroServices.Core/ExceptionMessages.resx
+++ b/src/MicroServices.Core/ExceptionMessages.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BinaryFormatterSerializer_DecodeFailed" xml:space="preserve">
+    <value>Could not decode the specified value ('{0}'). See inner exception for details.</value>
+  </data>
   <data name="Comparable_IncomparableType" xml:space="preserve">
     <value>The specified object of type '{0}' cannot be compared to instance of type '{1}'.</value>
   </data>
@@ -140,5 +143,8 @@
   </data>
   <data name="ReadOnlyList_IndexOutOfRange" xml:space="preserve">
     <value>There is no element at index '{0}' (Count = {1}).</value>
+  </data>
+  <data name="Serializer_TypeConversionFailed" xml:space="preserve">
+    <value>Could not convert instance of type '{0}' to an instance of type '{1}'. See inner exception for details.</value>
   </data>
 </root>
