--- a/src/MicroServices.Implementation/ExceptionMessages.resx
+++ b/src/MicroServices.Implementation/ExceptionMessages.resx
@@ -129,6 +129,9 @@
   <data name="EndpointNameFormat_UnknownPlaceholderName" xml:space="preserve">
     <value>Unknown placeholder specified: '{0}'.</value>
   </data>
+  <data name="MessageBus_AlreadyCommitted" xml:space="preserve">
+    <value>Cannot send or publish any messages at this point because the operation has already committed to its output.</value>
+  </data>
   <data name="MessageBus_NegativeDelayNotAllowed" xml:space="preserve">
     <value>The specified delay ({0}) is not allowed to be negative.</value>
   </data>
