Implemented MicroServiceBusController and made some other improvements.

--- a/src/MicroServices.Implementation/ExceptionMessages.resx
+++ b/src/MicroServices.Implementation/ExceptionMessages.resx
@@ -216,6 +216,9 @@
   <data name="MicroProcessorOperation_OperationCancelledUnexpectedly" xml:space="preserve">
     <value>A certain operation was cancelled unexpectedly.</value>
   </data>
+  <data name="MicroServiceBusController_ControllerAlreadyStarted" xml:space="preserve">
+    <value>Cannot start controller of type '{0}' because the controller has already been started.</value>
+  </data>
   <data name="MicroServiceBusEndpoint_MessageNotOfSupportedType" xml:space="preserve">
     <value>Message of type '{0}' is not supported by endpoint '{1}'. This endpoint only supports messages that can be converted to an instance of type '{2}'.</value>
   </data>
